# mec

./: .gitignore  LICENSE  MIGRATION.md  PERFORMANCE.md  README.md  pyproject.toml
.github/workflows/: mec.yaml
examples/: arimec_example.py  causal_inference_example.py  fimec_example.py  gpt2.py  greedy_mec_example.py  greedy_mec_sparse_example.py  random_string.py  stego_encrypted_example.py  stego_unencrypted_example.py
mec/: __init__.py  exceptions.py  utilities.py
mec/approximation/: algorithms.py
mec/iterative/: algorithms.py  marginals.py  posteriors.py
rust/: Cargo.toml  README.md  pyproject.toml
rust-mec/: Cargo.toml  pyproject.toml
rust-mec/src/: lib.rs  sparse_coupling.rs
rust/src/: lib.rs  sparse_coupling.rs
tests/: common.py  marginals.py  test_arimec.py  test_examples.py  test_fimec.py  test_greedy_mec.py  test_merge.py  test_timec.py  utilities.py
